# flask_website

./: README.md  app.py  pyproject.toml
project/: app.py  forms.py  models.py
project/instance/: database.db
project/migrations/versions/: c74b0d8a0bed_initial_migration.py
project/static/css/: base.css  home.css  login.css  register.css  style.css
project/templates/: admin_courses.html  base.html  dashboard.html  edit_course.html  enroll.html  home.html  login.html  register.html  schedule.html  signin.html  withdraw.html
